samples/_failures_safe/1761293932_c3acd9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fe50a412.c: In function ‘print_compression_info’:
./samples/SAFE/__tmp_fe50a412.c:176:12: error: missing terminating " character
  176 |     printf("  Compressed size
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_fe50a412.c:176:5: error: expected expression at end of input
  176 |     printf("  Compressed size
      |     ^~~~~~
./samples/SAFE/__tmp_fe50a412.c:176:5: error: expected declaration or statement at end of input
